--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,5 +35,6 @@
       <li><a class="post-link" href="http://backlion.cnblogs.com/" target="_blank">backlion</a></li>
       <li><a class="post-link" href="http://sh1yan.top" target="_blank">sh1yan</a></li>
       <li><a class="post-link" href="http://pcat.cc" target="_blank">pcat</a></li>
+      <li><a class="post-link" href="http://wolvez.club/" target="_blank">lostwolf's blog</a></li>
   </ul>
 </div>
