--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,6 @@
-<footer class="footer">
-<div class="wrapper">
-&copy; 2017 {{ site.author }}
-</div>
-</footer>
-
-<script src="{{ "/js/easybook.js" | prepend: site.baseurl }}"></script>
+<nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container footer-content">
+    Copyright @ 2018 by 倾旋<br>
+    Powered By Jekyll
+  </div>
+</nav>
