--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,22 +4,11 @@
   {% include head.html %}
 
   <body>
-
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        <div class="col-main">
-          {{ content }}
-        </div>
-        <div class="col-second">
-          {% include sidebar.html %}
-        </div>
-      </div>
-    </div>
-
-    {% include footer.html %}
-
+{% include header.html %}
+<section>
+{{content}}
+</section>
+{% include footer.html %}
   </body>
 
 </html>
