--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,16 +1,14 @@
 ---
 layout: default
 ---
-<div class="post">
+<div class="jumbotron">
+<div class="container">
+  <h1 class="post-title-main" itemprop="name headline">{{ page.title }}</h1>
+<center>  <h4 class="post-title-main" itemprop="name headline">{{ page.tagline}}</h4></center>
+</div>
+</div>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+<div class="container page-stuff">
 
-  <article class="post-content">
-    {{ content }}
-  </article>
-
-  {% include comment.html %}
-
+  {{ content }}
 </div>
