--- a/css/main.scss
+++ b/css/main.scss
@@ -3,13 +3,178 @@
 ---
 @charset "utf-8";
 
-$base-font-family: "Open Sans", "Helvetica Neue", "DejaVu Sans", Arial, "PingFang SC", "Noto Sans CJK SC", "Hiragino Sans GB", "微软雅黑",  Helvetica, sans-serif;
+.navbar-default{
+  background: #093750 !important;
+  border: none !important;
+
+}
+
+h2{
+  color:white;
+}
+h3{
+  color:#ddd;
+
+}
+
+.navbar-default .navbar-nav > li > a{
+    color:#abc0ca !important;
+}
+.navbar-default .navbar-nav > li > a:hover{
+    color:#03a4fb !important;
+
+}
+.navbar-default .navbar-nav > li > a:focus{
+    color:#03a4fb !important;
+}
+.navbar-default .navbar-brand{
+  color:#abc0ca !important;
+}
+.footer-content{
+  text-align: center;
+  padding: 0.5em;
+}
+body{
+  background-color: #022335 !important;
+  font-family: "Fira Mono" !important;
+  color: #abc0ca !important;
+}
+.page-stuff{
+  a {
+    color: #03a4fb !important;
+    text-decoration: none;
+      &:hover{
+        color:#03a4fb !important;
+        text-decoration: none !important;
+        border-bottom: 1px dotted #03a4fb;
+        padding-bottom:0.5em;
+      }
+    }
+  }
+#page-content{
+  padding-bottom: 4em;
+}
+
+.page-stuff{
+  padding-top: 2em;
+  padding-bottom: 5em;
+}
+.jumbotron {
+  background: #093750 !important;
+}
+a {
+    color: #03a4fb;
+    text-decoration: none;
+}
+a:hover{
+  color:#03a4fb !important;
+  text-decoration: none !important;
+  border-bottom: 1px dotted #03a4fb;
+
+}
+
+.post-list{
+
+    text-align: center;
+
+}
+.post-box{
+  padding-top: 2em;
+padding-bottom: 2em;
+}
+
+.post-title{
+  font-size: 20px !important;
+color:  #abc0ca !important;
+}
+
+.post-excerpt{
+  color: white !important;
+padding-top: 0.5em;
+padding-bottom: 0.3em;
+}
+.post-title-main{
+  text-align: center;
+  color: white !important;
+}
+.post-content{
+  font-size: 19px;
+  text-align: justify;
+  padding-bottom: 5em;
+}
+pre{
+background-color: black !important;
+border:none !important;
+border-radius: 0px !important;
+font-size: 20px !important;
+padding: 1.5em !important;
+color:white !important;
+}
+.post-meta{
+  color: skyblue !important;
+}
+
+code{
+  background-color: black !important;
+  color: white !important;
+  border: none !important;
+  border-radius: 0px !important;
+}
+
+.page-tagline{
+  font-size: 20px;
+text-align: center;
+}
+
+.download{
+  padding:2em;
+  font-size: 19px;
+}
+.intro{
+  font-size: 19px;
+
+}
+.manual-title{
+  font-size: 21px;
+  padding: 1em;
+  text-transform: uppercase;
+
+}
+.manual-content{
+  text-align: justify;
+  font-size: 19px;
+}
+
+.man-title{
+  font-size: 22px;
+  text-align: center;
+  padding: 1em;
+  letter-spacing: 2px;
+
+}
+
+.jumbotron{
+  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.15);
+}
+.navbar{
+  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.15);
+}
+// Our variables
+$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
+$base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$code-font-family:   Menlo, Monaco, Consolas, "DejaVu Sans Mono", "Liberation Mono", "文泉驿等宽微米黑", "Courier New", Courier, SimSun, monospace;
-$code-font-size:     15px;
+$spacing-unit:     30px;
+
+$text-color:       #111;
+$background-color: #fdfdfd;
+$brand-color:      #2a7ae2;
+
+$grey-color:       #828282;
+$grey-color-light: lighten($grey-color, 40%);
+$grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
 $content-width:    800px;
@@ -17,14 +182,15 @@ $content-width:    800px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
-$color-link: #036;
-$color-link-hover: #069;
 
-$header-bg: #607D8B;
-$header-bg-hover: #78909C;
-$header-link: #CFD8DC;
-$header-fg: #FFF;
 
+// Use media queries like this:
+// @include media-query($on-palm) {
+//     .wrapper {
+//         padding-right: $spacing-unit / 2;
+//         padding-left: $spacing-unit / 2;
+//     }
+// }
 @mixin media-query($device) {
     @media screen and (max-width: $device) {
         @content;
@@ -35,8 +201,13 @@ $header-fg: #FFF;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "base",
-        "layout",
-        "syntax-highlighting",
-        "easybook"
+        "syntax-highlighting"
 ;
+
+.post-content img{
+  
+  width:80%;
+  height:60%;
+
+
+}
