--- a/css/main.scss
+++ b/css/main.scss
@@ -117,8 +117,9 @@ color:white !important;
 code{
   background-color: black !important;
   color: white !important;
-  border: none !important;
   border-radius: 0px !important;
+  box-shadow: inset 0 1px 10px rgba(0,0,0,.3), 0 1px 0 rgba(255,255,255,.1), 0 -1px 0 rgba(0,0,0,.5);
+  border-radius:10px;
 }
 
 .page-tagline{
