--- a/css/main.scss
+++ b/css/main.scss
@@ -104,8 +104,8 @@ padding-bottom: 0.3em;
 }
 pre{
 background-color: black !important;
-border:none !important;
-border-radius: 0px !important;
+border:1px sold   #2F4F4F;
+border-radius: 10px !important;
 font-size: 20px !important;
 padding: 1.5em !important;
 color:white !important;
@@ -117,9 +117,10 @@ color:white !important;
 code{
   background-color: black !important;
   color: white !important;
-  border-radius: 0px !important;
+  border-radius: 10px !important;
   box-shadow: inset 0 1px 10px rgba(0,0,0,.3), 0 1px 0 rgba(255,255,255,.1), 0 -1px 0 rgba(0,0,0,.5);
-  border-radius:10px;
+  border:5px;
+  padding: 5px !important;
 }
 
 .page-tagline{
