--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container footer-content">
-    Copyright @ 2018 by 倾旋<br>
-    Powered By Jekyll
+    Jekyll Theme by Hemang Kumar<br>
+    Powered By Jekyll <br>
+    Site owner is 倾旋
   </div>
 </nav>
