--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,5 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container footer-content">
-    Jekyll Theme by Hemang Kumar<br>
-    Powered By Jekyll <br>
-    Site owner is 倾旋
+    Jekyll Theme by Hemang Kumar/Powered By Jekyll/Site owner is 倾旋
   </div>
 </nav>
