--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,8 @@
     </div>
 
     {% include footer.html %}
-
+<script type="text/javascript" src="/js/lightbox-plus-jquery.min.js"></script>
+<script type="text/javascript" src="/js/global.js"></script>
   </body>
 
 </html>
