--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,7 @@
     </div>
 
     {% include footer.html %}
-<script type="text/javascript" src="/js/lightbox-plus-jquery.min.js"></script>
+<script type="text/javascript" src="http://rvn0xsy.oss-cn-shanghai.aliyuncs.com/js/lightbox-plus-jquery.min.js"></script>
 <script type="text/javascript" src="/js/global.js"></script>
-  </body>
-
+</body>
 </html>
