--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
     {% if site.twitter_username %}
     <a href="https://twitter.com/{{ site.twitter_username }}">Twitter</a>
     {% endif %}
-    <a href="mailto:payloads@aliyun.com">Email</a>
+    <a href="javascript:document.write('payloads'+'@'+'aliyun.com');">Email</a>
     {% for link in site.profile_links %}
     <a href="{{ link | last }}">{{ link | first }}</a>
     {% endfor %}
