--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -25,16 +25,20 @@ code,pre {
 code {
 	color: #900;
 	background-color: #fff;
-	padding: 2px 5px;
-	border-radius: 5px;
+	padding: 5px 10px;
+	border-radius: 10px;
+	word-break: break-all;
+	word-wrap: break-word;
 }
 pre {
 	overflow-x: auto;
 	padding: 20px 50px;
+
 }
 pre, pre code {
 	color: #fafafa;
 	background-color: #223;
+
 }
 pre code {
 	padding: 0;	
