--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -15,7 +15,7 @@ body {
 .header {
 	line-height: $base-font-size * 2;
 	background-color: $header-bg;
-	padding: 10px;
+	padding: 20px;
 	margin: 0;
 	
 	&:after {
@@ -30,7 +30,7 @@ body {
 		float: left;
 		color: $header-fg;
 		text-decoration: none;
-		font-size: $base-font-size;
+		font-size: 30px;
 		line-height: $base-font-size * 2;
 	}
 	.site-nav {
