new a focus color

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,8 +9,8 @@ a {
 	color: #036;
 }
 a:hover, a:focus {
-	text-decoration:underline;
-	color: #069;
+	/*text-decoration:underline;*/
+	color: #66d9ef;
 }
 blockquote {
 	background: #FFF;
